--- a/src/app/modules/wheater/components/weather-card/weather-card.component.html
+++ b/src/app/modules/wheater/components/weather-card/weather-card.component.html
@@ -46,7 +46,7 @@
       <div class="info-block">
         <div class="info-block-label">
           <fa-icon size="lg" [icon]="humidityIcon"></fa-icon>
-          <span>Humidade</span>
+          <span>umidade</span>
         </div>
 
         <div class="info-block-value">
